Big progress on the draft for the final analysis report

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -9,7 +9,7 @@ number-sections: true
 number-depth: 2
 fig-align: center
 fig-cap-location: bottom
-tbl-cap-location: top
+tbl-cap-location: margin
 
 # setting for proper numbering of sections
 crossref: 
