almost final version, buggy toc, power analysis to write

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,10 +4,12 @@
 # table of contents
 toc: true
 toc-depth: 3
-toc-expand: 2
+toc-expand: 3
 number-sections: true
 number-depth: 2
 fig-align: center
+fig-asp: 0.618
+fig-format: svg
 fig-cap-location: bottom
 tbl-cap-location: margin
 
